# databricks-mcp-server

./: README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
databricks_mcp_server/: __init__.py  server.py
databricks_mcp_server/handlers/: commands.py
databricks_mcp_server/services/: __init__.py  catalogs.py  client.py  schemas.py  sql.py  tables.py
scripts/: live_checks.py
tests/: test_handlers.py  test_sql_guardrails.py
